Remove misleading comments. Forgot to enable use of request extensions.

--- a/etc-pki-tls-openssl.cnf
+++ b/etc-pki-tls-openssl.cnf
@@ -123,7 +123,7 @@ x509_extensions	= v3_ca	# The extentions to add to the self signed cert
 # WARNING: ancient versions of Netscape crash on BMPStrings or UTF8Strings.
 string_mask = utf8only
 
-# req_extensions = v3_req # The extensions to add to a certificate request
+req_extensions = v3_req # The extensions to add to a certificate request
 
 [ req_distinguished_name ]
 countryName			= Country Name (2 letter code)
