Apache SSL config adjusted

--- a/system_files/etc/httpd/conf.d/shared/ssl_without_certs.conf
+++ b/system_files/etc/httpd/conf.d/shared/ssl_without_certs.conf
@@ -1,7 +1,7 @@
 # For description look into /etc/httpd/conf.d/ssl.conf
 SSLEngine on
 SSLProtocol all -SSLv2
-SSLCipherSuite HIGH:MEDIUM:!aNULL:!MD5
+SSLCipherSuite ALL:!aNULL:!ADH:!eNULL:!LOW:!EXP:RC4+RSA:+HIGH:+MEDIUM
 <Files ~ "\.(cgi|shtml|phtml|php3?)$">
     SSLOptions +StdEnvVars
 </Files>
