--- a/gui-dev-env/Vagrantfile
+++ b/gui-dev-env/Vagrantfile
@@ -65,6 +65,8 @@ Vagrant.configure(2) do |config|
 	 # enable mouse interaction
      vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
      vb.customize ["modifyvm", :id, "--draganddrop", "bidirectional"]
+	 # create a DVD drive
+     vb.customize ['storageattach', :id, '--storagectl', 'IDE', '--port', 1, '--device', 0, '--type', 'dvddrive', '--medium', 'emptydrive']
   end
   # config.vbguest.installer_arguments = ['--target /home/vagrant/VBoxGuestAddons --keep']
   #
@@ -234,16 +236,16 @@ EOF
      sudo cp localhost.key /etc/pki/tls/private/localhost.key
      sudo cp localhost.csr /etc/pki/tls/private/localhost.csr
      sudo restorecon -RvF /etc/pki     
-     wget http://download.jetbrains.com/python/pycharm-community-2016.3.2.tar.gz
-     tar -xzf pycharm-community-2016.3.2.tar.gz
+     wget http://download.jetbrains.com/python/pycharm-community-2017.1.2.tar.gz
+     tar -xzf pycharm-community-2017.1.2.tar.gz
      mkdir -p .local/share/applications
      cat > .local/share/applications/jetbrains-pycharm-ce.desktop <<"EOF"      
 [Desktop Entry]
 Version=1.0
 Type=Application
 Name=PyCharm Community Edition
-Icon=/home/vagrant/pycharm-community-2016.3.2/bin/pycharm.png
-Exec="/home/vagrant/pycharm-community-2016.3.2/bin/pycharm.sh" %f
+Icon=/home/vagrant/pycharm-community-2017.1.2/bin/pycharm.png
+Exec="/home/vagrant/pycharm-community-2017.1.2/bin/pycharm.sh" %f
 Comment=Develop with pleasure!
 Categories=Development;IDE;
 Terminal=false
