--- a/gui-dev-env/Vagrantfile
+++ b/gui-dev-env/Vagrantfile
@@ -236,7 +236,7 @@ EOF
      sudo cp localhost.key /etc/pki/tls/private/localhost.key
      sudo cp localhost.csr /etc/pki/tls/private/localhost.csr
      sudo restorecon -RvF /etc/pki     
-     wget https://download.jetbrains.com/python/pycharm-community-2017.3.2.exe
+     wget https://download.jetbrains.com/python/pycharm-community-2017.3.2.tar.gz
      tar -xzf pycharm-community-2017.3.2.tar.gz
      mkdir -p .local/share/applications
      cat > .local/share/applications/jetbrains-pycharm-ce.desktop <<"EOF"      
