--- a/gui-dev-env/Vagrantfile
+++ b/gui-dev-env/Vagrantfile
@@ -230,7 +230,7 @@ EOF
  
 EOF
      openssl genrsa -out localhost.key 2048
-     openssl req -nodes -newkey rsa:2048 -key localhost.key -out localhost.csr -subj "/C=XX/ST=local/L=local/O=localdomain/OU=localhost/CN=*.localdomnain"
+     openssl req -nodes -newkey rsa:2048 -key localhost.key -out localhost.csr -subj "/C=XX/ST=local/L=local/O=localdomain/OU=localhost/CN=*.localdomain"
      openssl x509 -req -days 365 -in localhost.csr -signkey localhost.key -out localhost.crt
      sudo cp localhost.crt /etc/pki/tls/certs/localhost.crt
      sudo cp localhost.key /etc/pki/tls/private/localhost.key
