Enable vbox services to allow more comfortable interactions. Addons are installed before X11 is there so automatic installation is not working as expected.

--- a/gui-dev-env/Vagrantfile
+++ b/gui-dev-env/Vagrantfile
@@ -253,5 +253,6 @@ StartupWMClass=jetbrains-pycharm-ce
 EOF
   cd /home
   chown vagrant:vagrant -R vagrant
+  cp /opt/VBoxGuestAdditions-*/other/98vboxadd-xclient /etc/X11/xinit/xinitrc.d/
   SHELL
 end
