Custom error pages fixed not to generate redirects

--- a/system_files/etc/httpd/conf.d/shared/error_pages.conf
+++ b/system_files/etc/httpd/conf.d/shared/error_pages.conf
@@ -1,4 +1,9 @@
-ErrorDocument 500 https://acdh.oeaw.ac.at/500.html
-ErrorDocument 502 https://acdh.oeaw.ac.at/502.html
-ErrorDocument 503 https://acdh.oeaw.ac.at/503.html
+DocumentRoot /var/www/html
+ProxyErrorOverride on
+ProxyPass     /errors !
+ErrorDocument 500 /errors/500.html
+ErrorDocument 501 /errors/501.html
+ErrorDocument 502 /errors/502.html
+ErrorDocument 503 /errors/503.html
+ErrorDocument 504 /errors/504.html
 
