Turn off trapping request errors by proxy

--- a/system_files/etc/httpd/conf.d/shared/error_pages.conf
+++ b/system_files/etc/httpd/conf.d/shared/error_pages.conf
@@ -1,5 +1,5 @@
 DocumentRoot /var/www/html
-ProxyErrorOverride on
+ProxyErrorOverride off
 ProxyPass     /errors !
 ErrorDocument 500 /errors/500.html
 ErrorDocument 501 /errors/501.html
