--- a/gui-dev-env/Vagrantfile
+++ b/gui-dev-env/Vagrantfile
@@ -132,7 +132,7 @@ sudo mkdir -p /var/lib/docker/images/tmp
 sudo chmod 777 /var/lib/docker/images/tmp
 
 # SELinux context to allow docker access external mounts
-sudo semanage fcontext -a -t svirt_sandbox_file_t "/home(/.*)?"
+sudo semanage fcontext -a -t container_file_t "/home(/.*)?"
 sudo semanage fcontext -a -t ssh_home_t "/home/[^/]*/\.ssh(/.*)?"
 sudo restorecon -RvF /home
 
@@ -236,16 +236,16 @@ EOF
      sudo cp localhost.key /etc/pki/tls/private/localhost.key
      sudo cp localhost.csr /etc/pki/tls/private/localhost.csr
      sudo restorecon -RvF /etc/pki     
-     wget https://download.jetbrains.com/python/pycharm-community-2018.2.4.tar.gz
-     tar -xzf pycharm-community-2018.2.4.tar.gz
+     wget https://download.jetbrains.com/python/pycharm-community-2018.3.tar.gz
+     tar -xzf pycharm-community-2018.3.tar.gz
      mkdir -p .local/share/applications
      cat > .local/share/applications/jetbrains-pycharm-ce.desktop <<"EOF"      
 [Desktop Entry]
 Version=1.0
 Type=Application
 Name=PyCharm Community Edition
-Icon=/home/vagrant/pycharm-community-2018.2.4/bin/pycharm.png
-Exec="/home/vagrant/pycharm-community-2018.2.4/bin/pycharm.sh" %f
+Icon=/home/vagrant/pycharm-community-2018.3/bin/pycharm.png
+Exec="/home/vagrant/pycharm-community-2018.3/bin/pycharm.sh" %f
 Comment=Develop with pleasure!
 Categories=Development;IDE;
 Terminal=false
