--- a/gui-dev-env/Vagrantfile
+++ b/gui-dev-env/Vagrantfile
@@ -68,6 +68,13 @@ Vagrant.configure(2) do |config|
 	 # create a DVD drive
      vb.customize ['storageattach', :id, '--storagectl', 'IDE', '--port', 1, '--device', 0, '--type', 'dvddrive', '--medium', 'emptydrive']
   end
+  config.vm.provider "hyperv" do |hyperv|
+     # Customize the amount of memory on the VM:
+     hyperv.memory = 2048
+     hyperv.maxmemory = 4096
+     hyperv.cpus = 2
+     hyperv.enable_virtualization_extensions = true
+  end
   # config.vbguest.installer_arguments = ['--target /home/vagrant/VBoxGuestAddons --keep']
   #
   # View the documentation for the provider you are using for more
@@ -92,7 +99,7 @@ sudo yum makecache fast
 sudo yum install -y yum-plugin-fastestmirror deltarpm epel-release
 sudo yum makecache fast
 sudo yum update -y
-sudo yum install -y git docker docker-selinux python-docker python-setuptools httpd mod_ssl net-tools xfsprogs vim links perl-JSON-PP
+sudo yum install -y git docker docker-selinux python-docker python36-docker python-setuptools python36-setuptools httpd mod_ssl net-tools xfsprogs vim links perl-JSON-PP
 
 git clone https://github.com/acdh-oeaw/docker-tools.git
 pushd docker-tools
@@ -154,8 +161,15 @@ sudo systemctl enable docker
 ###################
 sudo yum groups install -y "X Window System"
 sudo yum groups install -y "MATE Desktop"
-sudo yum install -y dnsmasq java-1.8.0-openjdk patch wget python-pip pyt
+sudo yum install -y dnsmasq java-1.8.0-openjdk patch wget python-pip python36-pip pyt python-setuptools python36-setuptools python2-distutils-extra python36-distutils-extra python2-distro python36-distro python-gobject python36-gobject python-psutil python36-psutil  python-setproctitle python36-setproctitle intltool mintmenu nano hyperv-tools
 sudo systemctl set-default graphical.target
+sudo clone https://github.com/ubuntu-mate/mate-tweak.git
+pushd mate-tweak
+./setup.py build && sudo ./setup.py install
+popd
+sed -i -e s~/usr/lib/linuxmint/~/usr/share/linuxmint/~g mate-tweak
+sudo sed -i -e 's/GRUB_CMDLINE_LINUX="no_timer_check/GRUB_CMDLINE_LINUX="video=hyperv_fb:1920x1080 no_timer_check/g' /etc/default/grub
+sudo grub2-mkconfig -o /boot/grub2/grub.cfg
 
 # vagrant itself needs sudo to not requiretty so this default is already reverted
 (cat | sudo tee /etc/NetworkManager/dnsmasq.d/localdomain-wildcard.conf) > /dev/null <<"EOF"
