--- a/system_files/etc/httpd/conf.d/increase_request_workers.conf
+++ b/system_files/etc/httpd/conf.d/increase_request_workers.conf
@@ -1,9 +1,18 @@
 # for mpm event
 # requires `sysctl -w net.core.somaxconn=1024` (runtime) and/or `echo "net.core.somaxconn=1024" > /etc/sysctl.d/10-apache.conf` (persistent)
-MaxConnectionsPerChild 0
-ListenBackLog 1024
-ServerLimit 200
-ThreadsPerChild 25
-MaxRequestWorkers 5000
-MaxClients 4000
-
+<IfModule mpm_worker_module>
+  MaxConnectionsPerChild 0
+  ListenBackLog 1024
+  ServerLimit 200
+  ThreadsPerChild 25
+  MaxRequestWorkers 5000
+  MaxClients 4000
+</IfModule>
+<IfModule mpm_event_module>
+  MaxConnectionsPerChild 0
+  ListenBackLog 1024
+  ServerLimit 200
+  ThreadsPerChild 25
+  MaxRequestWorkers 5000
+  MaxClients 4000
+</IfModule>
